@@ -17588,3 +17588,6 @@ failed: wireguard over asymmetric ports
 ---------------------------------- 2025-10-14 10:56:17 25.10.14
 no failed: wireguard over asymmetric ports
 qc pass: wireguard over asymmetric ports
+---------------------------------- 2025-10-14 21:25:32 25.10.14
+no qc pass: wireguard over asymmetric ports
+failed: wireguard over asymmetric ports
